# like-code

./: .claude_reference  .gitignore  .npmignore  README.md  cc-route  package.json
.codex-loop/: prompt.md
.codex-loop/scripts/: dispatch_agent.sh  init_codex_loop.cjs  monitor_codex_loop.sh  print_cron_entry.sh  run_daemon.py  run_daemon.sh  start_codex_loop.sh  status_codex_loop.sh  stop_codex_loop.sh
.github/workflows/: release.yml
cc-route/: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
cc-route/desktop/: index.html  package-lock.json  package.json
cc-route/desktop/src-tauri/: Cargo.toml  tauri.conf.json
cc-route/desktop/src-tauri/capabilities/: default.json
cc-route/desktop/src-tauri/icons/: icon.icns
cc-route/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  proxy_manager.rs  tray.rs
cc-route/docs/: ARCHITECTURE.md  PROVIDER_GUIDE.md
cc-route/proxy/: package-lock.json  package.json
cc-route/scripts/: build-all.js  build-desktop.js  generate-completions.js  install-plugin.js
cc-route/systemd/: cc-route.service
cc-route/wrapper/: cc-route.sh
docs/: cc-route-integration.md  typecheck-roadmap.md
snake_tank_battle/: SPEC.md
snake_tank_battle/parts/: main_loop.py  snake.py  tank.py
src/: Tool.ts  commands.ts  cost-tracker.ts  interactiveHelpers.tsx  tools.ts
src/_external/: preload.ts
src/bootstrap/: state.ts
src/bun-polyfill/: bundle.ts
src/cli/: print.ts
src/components/: AutoUpdater.tsx  DevBar.tsx  HudPanel.tsx  MessageSelector.tsx  NativeAutoUpdater.tsx
(+125 files in other folders)
