[package]
name = "cc-route-desktop"
version = "1.0.0"
description = "cc-route desktop app"
authors = ["cc-route contributors"]
license = "MIT"
repository = "https://github.com/your-org/cc-route"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time"] }
dirs = "5"
which = "6"

[features]
custom-protocol = ["tauri/custom-protocol"]
